# NeptunePracticeApp

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
CMake/: AddLibraries.cmake  BuildProjectTree.cmake  CmakeLists.txt  IncludeSources.cmake  PostBuildOperations.cmake
Libs/Include/Neptune/Engine/Multiplatform/HighLevel/Graphics/Spawners/: ViewSpawner.h
NeptunePracticeApp/: NeptunePracticeApp.sln
NeptunePracticeApp/NeptunePracticeApp/: FactoryExamples.cpp  FactoryExamples.h  Mandelbrot.cpp  NeptunePracticeApp.vcxproj  NeptunePracticeApp.vcxproj.filters  SimpleAppExamples.cpp  SimpleAppExamples.h  ViewSpawnerExamples.cpp  ViewSpawnerExamples.h  main.cpp
NeptunePracticeApp/NeptunePracticeApp/Classes/: ExApp.cpp  ExApp.h
NeptunePracticeApp/NeptunePracticeApp/Resources/Models/: ColoredCube.ply  triangle.ply
NeptunePracticeApp/NeptunePracticeApp/Resources/Models/Objs/ColouredPolygones/: TexturedPlans.mtl  TexturedPolygones.mtl
NeptunePracticeApp/NeptunePracticeApp/Resources/Shaders/: VertexBuffer.vert  basic_uniformblock.frag  basic_uniformblock.vert
NeptunePracticeApp/NeptunePracticeApp/Resources/Shaders/SelfPractice/: DisplayWithDividedColors.vert  ModelToClipSpace.vert  diffuseLighting.vert  test.vert  testView.vert  xwingDiffuseLighting.vert
Resources/: CMakeLists.txt
Resources/Models/: LowPolyTree.ply  cube.ply  xwing.ply
Resources/Models/Blend/: TexturedPlans.blend
Resources/Models/ClassicSonic/: ClassicSonic.DAE
Resources/Models/Objs/ColouredPolygones/: TexturedPlans.mtl
Resources/Models/Objs/Sonic/: sonic-the-hedgehog.mtl
Resources/Shaders/: CMakeLists.txt  UniformBlock.frag  UniformBlock.vert  UniformVariable.vert  VertexBuffer.frag
Resources/Shaders/SelfPractice/: CMakeLists.txt  diffuseLightingUniform.vert  testView.frag  xwingDiffuseLightingUniform.vert
Resources/Textures/: SonicKTX.ktx
Src/: CMakeLists.txt  FactoryExamples.cpp  InputSystemExamples.cpp  Mandelbrot.h  ViewSpawnerExamples.h
src/: InputSystemExamples.h  ViewSpawnerExamples.cpp  main.cpp
